
BEAM 5.0 is a new major version.

Complete list of BEAM 5.0 bug fixes and improvements

New BEAM Features

Improvements

[BEAM-1513] BEAM shall enable users to use Modified Julian Date (MJD) in band arithmetics

Bugs

[BEAM-1561] Slider labels of colour manipulation tool are all zero for small value ranges
[BEAM-1568] Numbers are displayed with too little #places after the comma
[BEAM-1514] ProductUtils.getScanLineTime fails for products with height 1
[BEAM-1564] Binning operator causes NPE with invalid graph XML

_____________________________________________________________________________

 Changes from 4.10.3 to 4.11
_____________________________________________________________________________

BEAM 4.11 is a release featuring lots of new tools. The Time Series Tools has been included into BEAM, which allows users
to create, inspect, and analyse time series of EO data. The new Temporal Percentile Operator has been introduced; it
allows users to create multiple kinds of gap-filled percentile computations. The old binning has been replaced by a new
one which adds a number of useful functions and aggregation methods. It is now possible to download data witihn BEAM using
the novel OPeNDAP client which provides an easy interface to arbitrary OPeNDAP servers. BEAM 4.11 now allows to write
NetCDF-4 data.
Some outdated parts of the software have been dropped in order to keep it lean, such as the former mosaic processor,
which has been fully replaced by a faster, more modern variant. Additionally, many changes in the API have been made
that allow users to even better develop software on basis of BEAM.

Complete list of BEAM 4.11 bug fixes and improvements

New BEAM Features

[BEAM-1479] - Create shapefile -> CSV converter tool
[BEAM-1420] - Support (A)ATSR Autumn 2012 reprocessed data products

Improvements

[BEAM-1481] - Explain the radiometric correction files
[BEAM-1477] - Update OBPG readers to 1.4
[BEAM-1126] - Pixel-geocoding consumes too much memory

Bugs
