@@ -31,6 +31,7 @@
     <changelog>
         <![CDATA[
         <p>From 4.x to 5.0:<br/>
+            [BEAM-1508] No progress indication in VISAT when writing files<br/>
             [BEAM-1582] Too many tile (stack) computations using GPT with single operator<br/>
             [BEAM-1562] Add version and name of module in metadata<br/>
             [BEAM-1557] Cannot configure SubsetOp to not copy metadata<br/>
