@@ -49,6 +49,7 @@ Bugs
 
 [BEAM-1561] Slider labels of colour manipulation tool are all zero for small value ranges
 [BEAM-1568] Numbers are displayed with too little #places after the comma
+[BEAM-1508] No progress indication in VISAT when writing files
 [BEAM-1514] ProductUtils.getScanLineTime fails for products with height 1
 [BEAM-1564] Binning operator causes NPE with invalid graph XML
 
